Bug 147704 - FILEOPEN PPTX: image appears vertically compressed (by a factor of two)
Summary: FILEOPEN PPTX: image appears vertically compressed (by a factor of two)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.2.6.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.2
Keywords: bibisected, bisected, filter:pptx, regression
Depends on:
Blocks: Regressions-imageHandling PPTX-Images
  Show dependency treegraph
 
Reported: 2022-02-28 21:41 UTC by Gerald Pfeifer
Modified: 2023-10-04 08:56 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample slide (PPTX) (6.31 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-02-28 21:41 UTC, Gerald Pfeifer
Details
Visual comparison LibreOffice (left) vs Office 365 (right) (290.93 KB, image/png)
2022-02-28 21:42 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2022-02-28 21:41:25 UTC
Created attachment 178588 [details]
Sample slide (PPTX)

When opened in LibreOffice, the image on the slide appears vertically
compressed by about a factor of two compared to PowerPoint.

This is a regression, not seen with

  Version: 6.4.8.0.0+
  Build ID: 99b065ec31d032fc08ab14f66430dac4fef904a5
  CPU threads: 8; OS: Linux 5.16; UI render: default; VCL: gtk3; 
  TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-6-4, Time:   2020-10-08_08:57:08

  Version: 7.1.8.0.0+ / LibreOffice Community
  Build ID: 4784990eda6098f0408276b4d424e81382a50460
  CPU threads: 8; OS: Linux 5.16; UI render: default; VCL: gtk3
  TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-7-1, Time: 2021-10-15_11:37:03

Seen with

  Version: 7.2.6.0.0+ / LibreOffice Community
  Build ID: 3db1a060a033a2f84bdf798bed3c7e2515a498ce
  CPU threads: 8; OS: Linux 5.16; UI render: default; VCL: gtk3
  TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-7-2, Time: 2022-01-30_18:48:19

  Version: 7.4.0.0.alpha0+ / LibreOffice Community
  Build ID: 522bde9470bbb321813fa5f1ca8e3c2ebb1bb5cc
  CPU threads: 8; OS: Linux 5.16; UI render: default; VCL: gtk3
Comment 1 Gerald Pfeifer 2022-02-28 21:42:42 UTC
Created attachment 178589 [details]
Visual comparison LibreOffice (left) vs Office 365 (right)
Comment 2 m_a_riosv 2022-02-28 22:59:38 UTC
Reproducible with
Version: 7.3.1.2 (x64) / LibreOffice Community
Build ID: 9fff0292474d6d0bf5df787b512c71d9ac4bc98e
CPU threads: 4; OS: Windows 10.0 Build 21390; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4202ea2c932a14d216e74617bbb74a85030c9a59
CPU threads: 4; OS: Windows 10.0 Build 21390; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL
Comment 3 Xisco Faulí 2022-03-01 09:02:38 UTC
This started to happen after

https://cgit.freedesktop.org/libreoffice/core/commit/?id=c6bf16909db054ec5467ebdc0ea0c9dc07307048

author	Xisco Fauli <xiscofauli@libreoffice.org>	2021-03-08 11:03:11 +0100
committer	Xisco Fauli <xiscofauli@libreoffice.org>	2021-03-11 15:01:40 +0100
commit c6bf16909db054ec5467ebdc0ea0c9dc07307048 (patch)
tree 604520fac37e9cc064e2b58566b691014f9cd493
parent 1a0af07a556e53dd156d933a8fb82bd13b5e84b1 (diff)
Revert "tdf#118133 DOCX import: disable lazy-loading of tiff images"

Adding Cc: to Xisco Fauli

Bisected with bibisect-linux64-7.2
Comment 4 Xisco Faulí 2022-03-01 09:27:27 UTC
Actually, this is an older regression

https://cgit.freedesktop.org/libreoffice/core/commit/?id=8484e52675052848d2d3ffe07378ce2ad29fd288

author	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2018-05-11 00:22:06 +0900
committer	Tomaž Vajngerl <quikee@gmail.com>	2018-05-12 10:07:09 +0200
commit 8484e52675052848d2d3ffe07378ce2ad29fd288 (patch)
tree 61745cc72ae36c6a04572021e6ccac1638a12c35
parent 3e2fdcf48055572dd0f6bb7d73b14c1832622f24 (diff)
tdf#117427 missing API for determining and loading linked graphic

Bisected with: bibisect-linux64-6.1

Adding Cc: to Tomaž Vajngerl
Comment 5 Commit Notification 2023-09-02 05:33:12 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9c636d76a9a7e167da39913ab60f5135f8e831a6

tdf#147704 fix reading TIFF metadata (width and height)

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 BogdanB 2023-09-02 12:42:22 UTC
Thanks Tomaz and Gerald, it's ok now.

Ok in
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b0b7db318717b64259fc136e8d5b3268cd9af1c3
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Was bad in (for comparison reason)
Version: 7.5.3.2 (X86_64) / LibreOffice Community
Build ID: 9f56dff12ba03b9acd7730a5a481eea045e468f3
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 7 Commit Notification 2023-09-04 07:50:14 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/1428eb1dc2f6540ec2261da6bdfd8ca2e79d7a58

tdf#147704 fix reading TIFF metadata (width and height)

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.